--- a/index.html
+++ b/index.html
@@ -13,9 +13,22 @@
     </header>
      <a href="https://7891c298bbe5454892a8cf97c5cd2e1d.cc-propeller.cloud/#" 
      class="download_link">Download Excursion (Coming soon!)</a>
-    <div id=phone_vid>
-        
+    <div id="phone_vid">
+        <video autoplay loop muted>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">    
+        </video>
     </div>
+    <h2>Your personal travel guide</h2>
+    <p>Excusion remembers places you like, and recommends new points of interest around you.</p>
+    <p id="image">
+        <img src="resources/images/camp.webp">    
+    </p>
+    <img src="resources/images/phone.png">
+    <h2>Coming soon for iPhone and Android</h2>
+    <a href="https://7891c298bbe5454892a8cf97c5cd2e1d.cc-propeller.cloud/#" 
+     class="download_link">Download Excursion (Coming soon!)</a>
+     <p id="copyright">&#169; Excusrsion</p>
+
     
 </body>
 </html>
