--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header> 
         <h1>Discover hidden places in the world around you</h1>
     </header>
-     <a href="https://7891c298bbe5454892a8cf97c5cd2e1d.cc-propeller.cloud/#" 
+     <a href="https://7891c298bbe5454892a8cf97c5cd2e1d.cc-propeller.cloud/#" target="_blank" 
      class="download_link">Download Excursion (Coming soon!)</a>
     <div id="phone_vid">
         <video autoplay loop muted>
@@ -25,9 +25,9 @@
     </p>
     <img src="resources/images/phone.png">
     <h2>Coming soon for iPhone and Android</h2>
-    <a href="https://7891c298bbe5454892a8cf97c5cd2e1d.cc-propeller.cloud/#" 
+    <a href="https://7891c298bbe5454892a8cf97c5cd2e1d.cc-propeller.cloud/#" target="_blank"
      class="download_link">Download Excursion (Coming soon!)</a>
-     <p id="copyright">&#169; Excusrsion</p>
+     <p id="copyright">&#169; Excursion</p>
 
     
 </body>
